# Ferro-JType

./: Cargo.toml  README.md
examples/: infer.rs
src/: api.rs  diagnostic.rs  error.rs  hierarchy.rs  lib.rs  result.rs  summary.rs
src/cfg/: build.rs  graph.rs  mod.rs
src/ir/: classfile.rs  lower.rs  mod.rs  model.rs
src/solver/: class.rs  engine.rs  fields.rs  frame.rs  mod.rs  transfer.rs
src/solver/transfer/: stack.rs
src/types/: class_name.rs  descriptor.rs  dynamic.rs  generic.rs  inference.rs  invocation.rs  mod.rs
